iger.css
* {
  margin: 0;
  padding: 0;
}

html,
body {
  height: 100%;
  margin: 0;
  /* da ne moremo selektirati besede ali pa slike */
  user-select: none;
  /* da ne moremo drag&drop elemente, ampak potem bojo vse klike nefunkcionalne */
  /* pointer-events: none; */
  background: linear-gradient(270deg,
          #397367ff,
          #63cccaff,
          #5da399ff,
          #42858cff,
          rgb(53, 60, 56));
}

/* Uvažanje Lobster fonta iz Google-a */
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');

/* Uvažanje Open Sans Condensed Google fonta */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');


.zaslon {
  display: flex;
  flex-direction: row;
  height: 100%;
}

.meni {
  width: 15%;
  height: 100%;
  background: #08a49a;
  user-select: none;
}

.desna {
  /* margin-top: 50px; */
  width: 85%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

ul {
  margin-top: 0;
  padding: 0;
}

li {
  list-style-type: none;
  padding: 10px;
  font-size: 16pt;
  text-align: center;
  font-family: 'Lobster', cursive;
  background-color: #08a49a;
  border: none;
  color: #f4d53c;
}

a:link {
  text-decoration: none;
}

li:hover {
  background-color: #00504a;
  color: #edffa7;
  text-shadow: 0 0 5px rgb(79, 211, 255);
  cursor: pointer;
}

.karti {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-column-gap: 15px;
  grid-row-gap: 15px;
  /* user-select: none; */
}

img {
  padding: 15px;
  background-color: #fff;
  box-shadow: 0 0 7px #110e0e;
  image-resolution: 120px 120px;
  width: 100px;
  height: 100px;
  /* perspective: 1000px; */
  border-radius: 7px;
  /* kako zgleda slika vnotar kartic, da ni razsirjena */
  object-fit: scale-down;
  cursor: pointer;
}

.poz {
  padding: 0;
  width: 130px;
  height: 130px;
}



/* kartica */
.kartica-vn {
  position: relative;
  border-radius: 7px;
  height: 130px;
  width: 130px;
  cursor: pointer;
  transform-style: preserve-3d;
  transition: transform 1s ease-in-out;
}

.kartica-front,
.kartica-back {
  position: absolute;
  border-radius: 16px;
  top: 0;
  left: 0;
  backface-visibility: hidden;
}

.kartica-front {
  /* front - to be backsided, back - to be front sided */
  transform: rotateY(180deg);
}

.kartica.vrtenje {
  pointer-events: none;
}

.kartica-vn.is-flipped {
  transform: rotateY(180deg);
}

.kartica:hover {
  box-shadow: 0 0 7px #110e0e;
}

/* časovnik */
#ura {
  width: 12%;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 10px;
  padding: 10px 10px;
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 14pt;
  text-align: center;
  background-color: salmon;
  border-radius: 29px;
  box-shadow: 0px 0px 3px black;
  text-shadow: 3px 3px 2px gray;
  cursor: help;
}

@media only screen and (max-width: 768px) {
    .zaslon {
        flex-direction: column;
    }

    .meni {
        width: 100%;
        height: auto;
    }

    .desna {
        width: 100%;
        height: auto;
        align-items: flex-start;
        padding: 20px;
    }

    .karti {
        grid-template-columns: repeat(2, 1fr);
        grid-row-gap: 20px;
    }

    .poz {
        width: 100px;
        height: 100px;
    }

    .kartica-vn {
        height: 100px;
        width: 100px;
    }

    img {
        padding: 10px;
        width: 80px;
        height: 80px;
    }

    li {
        font-size: 12pt;
        padding: 5px;
    }
}

@media only screen and (max-width: 480px) {
    .karti {
        grid-template-columns: 1fr;
        grid-row-gap: 10px;
    }

    .poz {
        width: 80px;
        height: 80px;
    }

    .kartica-vn {
        height: 80px;
        width: 80px;
    }

    img {
        padding: 5px;
        width: 60px;
        height: 60px;
    }

    li {
        font-size: 10pt;
        padding: 3px;
    }
}

.gumb {
  display: flex;
  margin: auto;
  padding: 10px 20px;
  font-size: 16px;
  font-weight: bold;
  color: #ffffff;
  background-color: #4caf50;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 2px;
  cursor: pointer;
}

.gumb:hover {
  background-color: #45a049;
}

.gumb:focus {
  outline: none;
}

